fixed text looking funky on mobile

--- a/piza quest.css
+++ b/piza quest.css
@@ -65,7 +65,7 @@ a:visited {
 h1 {
   margin: 10px;
   font-family: "UP";
-  font-size: 100px;
+  font-size: 90px;
   color: white;
 }
 
@@ -96,11 +96,11 @@ h3 {
   
 @media screen and (max-width: 653px) {
   h3 {
-    font-size: 7vw;
+    font-size: 5vw;
   }
   
   h1 {
-    font-size: 15vw;
+    font-size: 11vw;
   }
   
   h2 {
